# baby-album-miniprogram

./: .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  LICENSE  README.md  jest.config.js  package-lock.json  package.json  private.wx5d0e66dc0e6fb16d.key  project.config.json  project.private.config.json  tsconfig.json
server/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose-minio.yml  docker-compose.arm.yml  docker-compose.yml  pyproject.toml
server/app/: __init__.py  config.py  database.py  main.py
server/app/middleware/: auth.py  error_handler.py  (+2 more)
server/migrations/: env.py
server/nginx/: default.conf  default.conf.arm
server/scripts/: init-db.sql  init_minio.py
server/tests/: conftest.py  test_achievement.py  test_achievement_extra.py  test_achievement_service_mock.py  test_age_calculator.py  test_alembic.py  test_analytics.py  test_analytics_ext.py  test_auth.py  test_auth_service.py  test_avatar.py  test_baby.py  test_baby_extra.py  test_baby_service.py  test_baby_service_ext.py  test_config.py  test_export.py  test_export_service.py  test_file_service.py  test_file_service_mock.py  test_growth_compare.py  test_logging.py  test_main.py  test_media.py  test_media_routes_ext.py  test_media_service.py  test_middleware.py  test_middleware_auth.py  test_middleware_error_handler.py  test_milestone.py  test_permission_middleware.py  test_rate_limiter.py  test_router_coverage.py  test_router_extra.py  test_router_mock.py  test_schemas_media.py  test_share.py  test_share_service.py  test_storage.py  test_storage_ext.py  (+8 more)
(+420 files in other folders)
